--- a/src/window.ui
+++ b/src/window.ui
@@ -32,9 +32,6 @@
   <property name="windowOpacity">
    <double>1.000000000000000</double>
   </property>
-  <property name="styleSheet">
-   <string notr="true">border-color: rgb(0, 0, 0);</string>
-  </property>
   <property name="documentMode">
    <bool>false</bool>
   </property>
@@ -48,8 +45,8 @@
    <property name="cursor">
     <cursorShape>ArrowCursor</cursorShape>
    </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(208, 208, 208);</string>
+   <property name="locale">
+    <locale language="Russian" country="Russia"/>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
@@ -59,6 +56,9 @@
       </property>
       <property name="leftMargin">
        <number>5</number>
+      </property>
+      <property name="topMargin">
+       <number>1</number>
       </property>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -80,6 +80,10 @@
             </property>
             <property name="text">
              <string/>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>brush_icon.png</normaloff>brush_icon.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -109,6 +113,10 @@
             <property name="text">
              <string/>
             </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>eraser_icon.png</normaloff>eraser_icon.png</iconset>
+            </property>
             <property name="iconSize">
              <size>
               <width>32</width>
@@ -134,6 +142,10 @@
             <property name="text">
              <string/>
             </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>fill_icon.png</normaloff>fill_icon.png</iconset>
+            </property>
             <property name="iconSize">
              <size>
               <width>32</width>
@@ -158,6 +170,10 @@
             </property>
             <property name="text">
              <string/>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>pencil_icon.png</normaloff>pencil_icon.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -234,6 +250,10 @@
             <property name="text">
              <string/>
             </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>circle_icon.png</normaloff>circle_icon.png</iconset>
+            </property>
             <property name="iconSize">
              <size>
               <width>24</width>
@@ -258,6 +278,10 @@
             </property>
             <property name="text">
              <string>...</string>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>line_icon.png</normaloff>line_icon.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -284,6 +308,10 @@
             <property name="text">
              <string>...</string>
             </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>octagon_icon.png</normaloff>octagon_icon.png</iconset>
+            </property>
             <property name="iconSize">
              <size>
               <width>24</width>
@@ -308,6 +336,10 @@
             </property>
             <property name="text">
              <string>...</string>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>pentagon_icon.png</normaloff>pentagon_icon.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -334,6 +366,10 @@
             <property name="text">
              <string>...</string>
             </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>triangle_icon.png</normaloff>triangle_icon.png</iconset>
+            </property>
             <property name="iconSize">
              <size>
               <width>24</width>
@@ -359,6 +395,10 @@
             <property name="text">
              <string>...</string>
             </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>hexagon_icon.png</normaloff>hexagon_icon.png</iconset>
+            </property>
             <property name="iconSize">
              <size>
               <width>24</width>
@@ -383,6 +423,10 @@
             </property>
             <property name="text">
              <string>...</string>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>rectangle_icon.png</normaloff>rectangle_icon.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -587,202 +631,32 @@
           <property name="spacing">
            <number>0</number>
           </property>
-          <item row="0" column="1">
-           <widget class="QToolButton" name="orange_button">
-            <property name="maximumSize">
-             <size>
-              <width>32</width>
-              <height>32</height>
-             </size>
-            </property>
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">background-color: rgb(255, 165, 0);</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="6">
-           <widget class="QToolButton" name="pink_button">
-            <property name="maximumSize">
-             <size>
-              <width>32</width>
-              <height>32</height>
-             </size>
-            </property>
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">background-color: rgb(255, 192, 203);</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="4">
-           <widget class="QToolButton" name="brown_button">
-            <property name="maximumSize">
-             <size>
-              <width>32</width>
-              <height>32</height>
-             </size>
-            </property>
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">background-color: rgb(150, 75, 0);</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="0">
-           <widget class="QToolButton" name="black_button">
-            <property name="maximumSize">
-             <size>
-              <width>32</width>
-              <height>32</height>
-             </size>
-            </property>
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">background-color: rgb(0, 0, 0);</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="5">
-           <widget class="QToolButton" name="blue_button">
-            <property name="maximumSize">
-             <size>
-              <width>32</width>
-              <height>32</height>
-             </size>
-            </property>
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">background-color: rgb(0, 0, 255);</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="3">
-           <widget class="QToolButton" name="green_button">
-            <property name="maximumSize">
-             <size>
-              <width>32</width>
-              <height>32</height>
-             </size>
-            </property>
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">background-color: rgb(0, 128, 0);</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="2">
-           <widget class="QToolButton" name="yellow_button">
-            <property name="maximumSize">
-             <size>
-              <width>32</width>
-              <height>32</height>
-             </size>
-            </property>
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">background-color: rgb(255, 255, 0);</string>
-            </property>
-           </widget>
-          </item>
           <item row="1" column="1">
            <widget class="QToolButton" name="white_button">
-            <property name="maximumSize">
-             <size>
-              <width>32</width>
-              <height>32</height>
-             </size>
-            </property>
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
-            </property>
             <property name="styleSheet">
              <string notr="true">background-color: rgb(255, 255, 255);</string>
             </property>
            </widget>
           </item>
-          <item row="0" column="6">
-           <widget class="QToolButton" name="purple_button">
-            <property name="maximumSize">
-             <size>
-              <width>32</width>
-              <height>32</height>
-             </size>
-            </property>
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
-            </property>
+          <item row="0" column="1">
+           <widget class="QToolButton" name="orange_button">
             <property name="styleSheet">
-             <string notr="true">background-color: rgb(139, 0, 255);</string>
-            </property>
-            <property name="toolButtonStyle">
-             <enum>Qt::ToolButtonIconOnly</enum>
+             <string notr="true">background-color: rgb(255, 165, 0);</string>
             </property>
            </widget>
           </item>
-          <item row="1" column="2">
-           <widget class="QToolButton" name="lightgrey_button">
-            <property name="maximumSize">
-             <size>
-              <width>32</width>
-              <height>32</height>
-             </size>
-            </property>
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
-            </property>
-            <property name="autoFillBackground">
-             <bool>false</bool>
-            </property>
+          <item row="0" column="0">
+           <widget class="QToolButton" name="red_button">
             <property name="styleSheet">
-             <string notr="true">background-color: rgb(187, 187, 187);</string>
+             <string notr="true">background-color: rgb(255, 0, 0);</string>
             </property>
-            <property name="toolButtonStyle">
-             <enum>Qt::ToolButtonIconOnly</enum>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="4">
-           <widget class="QToolButton" name="lightblue_button">
-            <property name="maximumSize">
-             <size>
-              <width>32</width>
-              <height>32</height>
-             </size>
-            </property>
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">background-color: rgb(66, 170, 255);</string>
+            <property name="autoRepeatDelay">
+             <number>296</number>
             </property>
            </widget>
           </item>
           <item row="1" column="5">
            <widget class="QToolButton" name="darkred_button">
-            <property name="maximumSize">
-             <size>
-              <width>32</width>
-              <height>32</height>
-             </size>
-            </property>
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
-            </property>
             <property name="styleSheet">
              <string notr="true">background-color: rgb(139, 0, 0);</string>
             </property>
@@ -790,45 +664,71 @@
           </item>
           <item row="1" column="3">
            <widget class="QToolButton" name="darkgrey_button">
-            <property name="maximumSize">
-             <size>
-              <width>32</width>
-              <height>32</height>
-             </size>
-            </property>
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
-            </property>
             <property name="styleSheet">
              <string notr="true">background-color: rgb(73, 66, 61);</string>
             </property>
            </widget>
           </item>
-          <item row="0" column="0">
-           <widget class="QToolButton" name="red_button">
-            <property name="minimumSize">
-             <size>
-              <width>24</width>
-              <height>24</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>32</width>
-              <height>32</height>
-             </size>
-            </property>
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
-            </property>
-            <property name="mouseTracking">
-             <bool>false</bool>
-            </property>
+          <item row="0" column="5">
+           <widget class="QToolButton" name="blue_button">
             <property name="styleSheet">
-             <string notr="true">background-color: rgb(255, 0, 0);</string>
+             <string notr="true">background-color: rgb(0, 0, 255);</string>
             </property>
-            <property name="toolButtonStyle">
-             <enum>Qt::ToolButtonIconOnly</enum>
+           </widget>
+          </item>
+          <item row="1" column="4">
+           <widget class="QToolButton" name="brown_button">
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(150, 75, 0);</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QToolButton" name="black_button">
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(0, 0, 0);</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="2">
+           <widget class="QToolButton" name="yellow_button">
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(255, 255, 0);</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="6">
+           <widget class="QToolButton" name="purple_button">
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(139, 0, 255);</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="3">
+           <widget class="QToolButton" name="green_button">
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(0, 128, 0);</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="2">
+           <widget class="QToolButton" name="lightgrey_button">
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(187, 187, 187);</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="6">
+           <widget class="QToolButton" name="pink_button">
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(255, 192, 203);</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="4">
+           <widget class="QToolButton" name="lightblue_button">
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(66, 170, 255);</string>
             </property>
            </widget>
           </item>
@@ -866,6 +766,16 @@
        </layout>
       </item>
       <item>
+       <widget class="Line" name="line_5">
+        <property name="frameShadow">
+         <enum>QFrame::Plain</enum>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
@@ -886,7 +796,7 @@
        <enum>QLayout::SetDefaultConstraint</enum>
       </property>
       <property name="bottomMargin">
-       <number>7</number>
+       <number>6</number>
       </property>
      </layout>
     </item>
@@ -910,14 +820,14 @@
     <addaction name="action_pencil"/>
     <addaction name="action_eraser"/>
     <addaction name="action_fill"/>
-    <addaction name="action_line"/>
-    <addaction name="action_circle"/>
     <addaction name="separator"/>
+    <addaction name="action_line"/>
     <addaction name="action_triangle"/>
     <addaction name="action_rectangle"/>
     <addaction name="action_pentagon"/>
     <addaction name="action_hexagon"/>
     <addaction name="action_octagon"/>
+    <addaction name="action_circle"/>
     <addaction name="separator"/>
    </widget>
    <widget class="QMenu" name="file_menu">
